# openrelik-worker-email-parser

./: README.md  pyproject.toml
src/: email_parsing_utils.py  tasks.py
tests/: test_email_parsing_utils.py
tests/testdata/: attachment_message.eml  attachment_message.mbox  inline_content_message.eml  inline_content_message.mbox  sample.mbox  simple_message.eml  simple_message.mbox
